[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Fibberish/Fibberish.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/black.png" type="Texture" id=3]
[ext_resource path="res://assets/UIThemes/Menus.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 182
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 85
font_data = ExtResource( 1 )

[node name="Pause" type="Node2D"]
modulate = Color( 0.75, 0.75, 0.75, 1 )
light_mask = 16
position = Vector2( -448, -412 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.270588 )
margin_left = -177.0
margin_top = -144.0
margin_right = 1180.0
margin_bottom = 850.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Instructions" type="RichTextLabel" parent="."]
margin_left = 206.0
margin_top = 81.0
margin_right = 706.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 160, -44 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Paused"
text = "Paused"

[node name="ResumeButton" type="Button" parent="."]
margin_left = 261.0
margin_top = 269.0
margin_right = 654.0
margin_bottom = 377.0
focus_neighbour_bottom = NodePath("../MenuButton")
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="MenuButton" type="Button" parent="."]
margin_left = 261.0
margin_top = 460.0
margin_right = 654.0
margin_bottom = 568.0
focus_neighbour_top = NodePath("../ResumeButton")
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Menu"

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
